--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="main">
     <section class="main__content">
-    <img class="illustration" src="assets/images/illustration-article.svg" alt="main art">
+    <img class="illustration" src="illustration-article.svg" alt="main art">
     <p class="learning">Learning</p>
     <p class="published">Published 21 Dec 2023</p>
     <h1>HTML & CSS foundations</h1>
     <p class="text">These languages are the backbone of every website, defining structure, content and presentation</p>
 
     <div class="author">
-    <img class="author__img" src="assets/images/image-avatar.webp" alt="Greg Hooper">
+    <img class="author__img" src="image-avatar.webp" alt="Greg Hooper">
     <p class="author__name">Greg Hooper</p>
     </div>
     </section>
